--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -10,6 +10,17 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Даров</h1>
+    <header class="header wrapper">
+        <object class="logo" data="./src/svg/logo.svg" type="image/svg+xml" width="690px" height="414px"></object>
+        <div class="navigation">
+            <ul class="navigation__list">
+                <li class="navigation__link"><a href="#">Favorite coffee</a></li>
+                <li class="navigation__link"><a href="#">About</a></li>
+                <li class="navigation__link"><a href="#">Mobile app</a></li>
+                <li class="navigation__link"><a href="#">Contact us</a></li>
+            </ul>
+        </div>
+        <div class="menu-link"></div>
+    </header>
 </body>
 </html>
