--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -26,6 +26,17 @@
                 <object class="menu-link__icon" data="./src/svg/coffee-cup.svg" type="image/svg+xml"></object>
             </div>
         </header>
+        <main class="main">
+            <section class="enjoy">
+                <div class="enjoy__container">
+                    <h1><span>Enjoy</span> premium <br> coffee at our <br> charming cafe</h1>
+                    <p>
+                        With its inviting atmosphere and delicious coffee options, the Coffee House Resource is a popular destination for coffee lovers and those seeking a warm and inviting space to enjoy their favorite beverage.
+                    </p>
+                    <button class="button button_primary ">Menu</button>
+                </div>
+            </section>
+        </main>
     </div>
 </body>
 </html>
