--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="wrapper">
         <header class="header">
-            <object class="headr__logo" data="./src/svg/logo.svg" type="image/svg+xml"></object>
+            <object class="headr__logo" data="./assets/svg/logo.svg" type="image/svg+xml"></object>
             <div class="navigation">
                 <ul class="navigation__list">
                     <li class="navigation__link "><a class="text-link" href="#">Favorite coffee</a></li>
@@ -23,7 +23,7 @@
             </div>
             <div class="header__menu-link">
                 <div class="text-link">Menu</div>
-                <object class="menu-link__icon" data="./src/svg/coffee-cup.svg" type="image/svg+xml"></object>
+                <object class="menu-link__icon" data="./assets/svg/coffee-cup.svg" type="image/svg+xml"></object>
             </div>
         </header>
         <main class="main">
@@ -35,6 +35,10 @@
                     </p>
                     <button class="button button_primary ">Menu</button>
                 </div>
+            </section>
+            <section class="favourites-coffee">
+                <h2>Choose your <span>favorite</span> coffee</h2>
+                <div class="carousel"></div>
             </section>
         </main>
     </div>
