feat: add favorite section

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -38,7 +38,25 @@
             </section>
             <section class="favourites-coffee">
                 <h2>Choose your <span>favorite</span> coffee</h2>
-                <div class="carousel"></div>
+                <div class="carousel">
+                    <object class="carousel__slide carousel__slide_left" data="./assets/svg/slide-left.svg" type="image/svg+xml"></object>
+                    <div class="carousel__container">
+                        <div class="carousel__item">
+                            <img src="./assets/png/coffee-slider-1.png" alt="coffee" class="carousel__img">
+                            <div class="carousel__describe">
+                                <div class="carousel__name-item">S’mores Frappuccino</div>
+                                <div class="carousel__describe-item">This new drink takes an espresso and mixes it with brown sugar and cinnamon before being topped with oat milk.</div>
+                                <div class="carousel__price-item">$5.50</div>
+                            </div>
+                        </div>
+                    </div>
+                    <object class="carousel__slide carousel__slide_right" data="./assets/svg/slide-right.svg" type="image/svg+xml"></object>
+                </div>
+                <div class="pagination">
+                    <span class="pagination__stick pagination__stick_active"></span>
+                    <span class="pagination__stick"></span>
+                    <span class="pagination__stick"></span>
+                </div>
             </section>
         </main>
     </div>
