feat: add about section

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -58,6 +58,15 @@
                     <span class="pagination__stick"></span>
                 </div>
             </section>
+            <section class="about">
+                <h2>Resource is <span>the perfect and cozy place</span> where you can enjoy a variety of hot beverages, relax, catch up with friends, or get some work done.</h2>
+                <div class="about__container-img">
+                    <div class="about__container-img-item"></div>
+                    <div class="about__container-img-item"></div>
+                    <div class="about__container-img-item"></div>
+                    <div class="about__container-img-item"></div>
+                </div>
+            </section>
         </main>
     </div>
 </body>
