--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -67,6 +67,29 @@
                     <div class="about__container-img-item"></div>
                 </div>
             </section>
+            <section class="mobile-app">
+                <div class="mobile-app__describe">
+                    <h2><span>Download</span> our apps to start ordering</h2>
+                    <p>Download the Resource app today and experience the comfort of ordering your favorite coffee from wherever you are</p>
+                    <div class="mobile-app__button-container">
+                        <button class="button button_app">
+                            <object class="mobile-app__logo-app" data="./assets/svg/apple.svg" type="image/svg+xml"></object>
+                            <div class="mobile-app__button-name-container">
+                                <div>Available on the</div>
+                                <div>App Store</div>
+                            </div> 
+                        </button>
+                        <button class="button button_app">
+                            <object class="mobile-app__logo-app" data="./assets/svg/play.svg" type="image/svg+xml"></object>
+                            <div class="mobile-app__button-name-container">
+                                <div>Available on</div>
+                                <div>Google Play</div>
+                            </div> 
+                        </button>
+                    </div>
+                </div>
+                <img src="./assets/png/mobile-screens.png" alt="img" class="mobile-app__img">
+            </section>
         </main>
     </div>
 </body>
