feat: add footer

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -91,6 +91,35 @@
                 <img src="./assets/png/mobile-screens.png" alt="img" class="mobile-app__img">
             </section>
         </main>
+        <footer class="footer">
+            <div class="footer__left">
+                <div class="footer__slogan">
+                    <h2>Sip, Savor, Smile. <span>It’s coffee time!</span></h2>
+                </div>
+                <div class="footer__social">
+                    <object class="footer__social-icon" data="./assets/svg/twitter.svg" type="image/svg+xml"></object>
+                    <object class="footer__social-icon" data="./assets/svg/instagram.svg" type="image/svg+xml"></object>
+                    <object class="footer__social-icon" data="./assets/svg/facebook.svg" type="image/svg+xml"></object>
+                </div>
+            </div>
+            <div class="footer__right">
+                <div class="footer__header-contact">Contact us</div>
+                <div class="footer__contacts">
+                    <div class="footer_contacts-container">
+                        <object data="./assets/svg/pin-alt.svg" type="image/svg+xml" class="footer__contacts-icon"></object>
+                        <div class="footer__contacts-item">8558 Green Rd.,  LA</div>
+                    </div>
+                    <div class="footer_contacts-container">
+                        <object data="./assets/svg/phone.svg" type="image/svg+xml" class="footer__contacts-icon"></object>
+                        <div class="footer__contacts-item">+1 (603) 555-0123</div>
+                    </div>
+                    <div class="footer_contacts-container">
+                        <object data="./assets/svg/clock.svg" type="image/svg+xml" class="footer__contacts-icon"></object>
+                        <div class="footer__contacts-item">Mon-Sat: 9:00 AM – 23:00 PM</div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
