--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -21,10 +21,12 @@
                     <li class="navigation__link"><a class="text-link" href="#">Contact us</a></li>
                 </ul>
             </div>
-            <div class="header__menu-link">
-                <div class="text-link">Menu</div>
-                <object class="menu-link__icon" data="./assets/svg/coffee-cup.svg" type="image/svg+xml"></object>
-            </div>
+            <a class="header__menu-link-wrapper" href="./src/html/menu.html">
+                <div class="header__menu-link">
+                    <div class="header__menu-text-link">Menu</div>
+                    <object class="menu-link__icon" data="./assets/svg/coffee-cup.svg" type="image/svg+xml"></object>
+                </div>
+            </a>
         </header>
         <main class="main">
             <section class="enjoy">
