feat: add footer shrink

--- a/coffee-house/src/html/menu.html
+++ b/coffee-house/src/html/menu.html
@@ -10,7 +10,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="wrapper">
+    <div class="wrapper wrapper-menu">
         <header class="header">
             <object class="headr__logo" data="../../assets/svg/logo.svg" type="image/svg+xml"></object>
             <div class="navigation">
@@ -26,7 +26,7 @@
                 <object class="menu-link__icon" data="../../assets/svg/coffee-cup.svg" type="image/svg+xml"></object>
             </div>
         </header>
-        <main class="main">
+        <main class="main main-menu">
         </main>
         <footer class="footer">
             <div class="footer__left">
