--- a/coffee-house/src/html/menu.html
+++ b/coffee-house/src/html/menu.html
@@ -21,14 +21,38 @@
                     <li class="navigation__link"><a class="text-link" href="#">Contact us</a></li>
                 </ul>
             </div>
-            <div class="header__menu-link">
+            <div class="header__menu-link header__menu-link_active">
                 <div class="text-link">Menu</div>
                 <object class="menu-link__icon" data="../../assets/svg/coffee-cup.svg" type="image/svg+xml"></object>
             </div>
         </header>
         <main class="main main-menu">
+            <section class="menu">
+                <h1>Behind each of our cups <br> hides an <span>amazing surprise</span></h1>
+                <div class="menu__tags-container">
+                    <div class="menu__tag menu__tag_active">
+                        <div class="menu__tag-icon-wrapper">
+                            <object class="menu-link__icon" data="../../assets/svg/coffee.svg" type="image/svg+xml"></object>
+                        </div>
+                        <div class="menu__tag-name">Coffee</div>
+                    </div>
+                    <div class="menu__tag">
+                        <div class="menu__tag-icon-wrapper">
+                            <object class="menu-link__icon" data="../../assets/svg/tea.svg" type="image/svg+xml"></object>
+                        </div>
+                        <div class="menu__tag-name">Tea</div>
+                    </div>
+                    <div class="menu__tag">
+                        <div class="menu__tag-icon-wrapper">
+                            <object class="menu-link__icon" data="../../assets/svg/dessert.svg" type="image/svg+xml"></object>
+                        </div>
+                        <div class="menu__tag-name">Dessert</div>
+                    </div>
+                </div>
+                <div class="menu__food-container"></div>
+            </section>
         </main>
-        <footer class="footer">
+        <footer class="footer footer-menu">
             <div class="footer__left">
                 <div class="footer__slogan">
                     <h2>Sip, Savor, Smile. <span>It’s coffee time!</span></h2>
