feat: add food card

--- a/coffee-house/src/html/menu.html
+++ b/coffee-house/src/html/menu.html
@@ -49,7 +49,21 @@
                         <div class="menu__tag-name">Dessert</div>
                     </div>
                 </div>
-                <div class="menu__food-container"></div>
+                <div class="menu__food-container">
+                    <div class="menu__tea-category">
+                        <div class="menu__food-item">
+                            <img src="../../assets/jpg/coffee-1.jpg" alt="img" width="340" height="340" class="menu__item-img">
+                            <div class="menu__item-description">
+                                <div class="menu__item-name">Irish coffee</div>
+                                <div class="menu__item-description">Fragrant black coffee with Jameson Irish whiskey and whipped milk</div>
+                                <div class="menu__item-price">$7.00</div>
+                            </div>
+                        </div>
+                        <div class="menu__food-item"></div>
+                        <div class="menu__food-item"></div>
+                        <div class="menu__food-item"></div>
+                    </div>
+                </div>
             </section>
         </main>
         <footer class="footer footer-menu">
