feat: add complete menu

--- a/coffee-house/src/html/menu.html
+++ b/coffee-house/src/html/menu.html
@@ -52,16 +52,69 @@
                 <div class="menu__food-container">
                     <div class="menu__tea-category">
                         <div class="menu__food-item">
-                            <img src="../../assets/jpg/coffee-1.jpg" alt="img" width="340" height="340" class="menu__item-img">
+                            <img src="../../assets/jpg/coffee-1.jpg" alt="img" class="menu__item-img">
                             <div class="menu__item-description">
                                 <div class="menu__item-name">Irish coffee</div>
-                                <div class="menu__item-description">Fragrant black coffee with Jameson Irish whiskey and whipped milk</div>
+                                <div class="menu__item-about">Fragrant black coffee with Jameson Irish whiskey and whipped milk</div>
                                 <div class="menu__item-price">$7.00</div>
                             </div>
                         </div>
-                        <div class="menu__food-item"></div>
-                        <div class="menu__food-item"></div>
-                        <div class="menu__food-item"></div>
+                        <div class="menu__food-item">
+                            <img src="../../assets/jpg/coffee-2.jpg" alt="img" class="menu__item-img">
+                            <div class="menu__item-description">
+                                <div class="menu__item-name">Kahlua coffee</div>
+                                <div class="menu__item-about">Classic coffee with milk and Kahlua liqueur under a cap of frothed milk</div>
+                                <div class="menu__item-price">$7.00</div>
+                            </div>
+                        </div>
+                        <div class="menu__food-item">
+                            <img src="../../assets/jpg/coffee-3.jpg" alt="img" class="menu__item-img">
+                            <div class="menu__item-description">
+                                <div class="menu__item-name">Honey raf</div>
+                                <div class="menu__item-about">Espresso with frothed milk, cream and aromatic honey</div>
+                                <div class="menu__item-price">$5.50</div>
+                            </div>
+                        </div>
+                        <div class="menu__food-item">
+                            <img src="../../assets/jpg/coffee-4.jpg" alt="img" class="menu__item-img">
+                            <div class="menu__item-description">
+                                <div class="menu__item-name">Ice cappuccino</div>
+                                <div class="menu__item-about">Cappuccino with soft thick foam in summer version with ice</div>
+                                <div class="menu__item-price">$5.50</div>
+                            </div>
+                        </div>
+                        <div class="menu__food-item">
+                            <img src="../../assets/jpg/coffee-5.jpg" alt="img" class="menu__item-img">
+                            <div class="menu__item-description">
+                                <div class="menu__item-name">Espresso</div>
+                                <div class="menu__item-about">Classic black coffee</div>
+                                <div class="menu__item-price">$4.50</div>
+                            </div>
+                        </div>
+                        <div class="menu__food-item">
+                            <img src="../../assets/jpg/coffee-6.jpg" alt="img" class="menu__item-img">
+                            <div class="menu__item-description">
+                                <div class="menu__item-name">Latte</div>
+                                <div class="menu__item-about">Espresso coffee with the addition of steamed milk and dense milk foam</div>
+                                <div class="menu__item-price">$5.50</div>
+                            </div>
+                        </div>
+                        <div class="menu__food-item">
+                            <img src="../../assets/jpg/coffee-7.jpg" alt="img" class="menu__item-img">
+                            <div class="menu__item-description">
+                                <div class="menu__item-name">Latte macchiato</div>
+                                <div class="menu__item-about">Espresso with frothed milk and chocolate</div>
+                                <div class="menu__item-price">$5.50</div>
+                            </div>
+                        </div>
+                        <div class="menu__food-item">
+                            <img src="../../assets/jpg/coffee-8.jpg" alt="img" class="menu__item-img">
+                            <div class="menu__item-description">
+                                <div class="menu__item-name">Coffee with cognac</div>
+                                <div class="menu__item-about">Fragrant black coffee with cognac and whipped cream</div>
+                                <div class="menu__item-price">$6.50</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -72,9 +125,9 @@
                     <h2>Sip, Savor, Smile. <span>It’s coffee time!</span></h2>
                 </div>
                 <div class="footer__social">
-                    <object class="footer__social-icon" data="./assets/svg/twitter.svg" type="image/svg+xml"></object>
-                    <object class="footer__social-icon" data="./assets/svg/instagram.svg" type="image/svg+xml"></object>
-                    <object class="footer__social-icon" data="./assets/svg/facebook.svg" type="image/svg+xml"></object>
+                    <object class="footer__social-icon" data="../../assets/svg/twitter.svg" type="image/svg+xml"></object>
+                    <object class="footer__social-icon" data="../../assets/svg/instagram.svg" type="image/svg+xml"></object>
+                    <object class="footer__social-icon" data="../../assets/svg/facebook.svg" type="image/svg+xml"></object>
                 </div>
             </div>
             <div class="footer__right">
