--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -12,7 +12,9 @@
 <body>
     <div class="wrapper">
         <header class="header">
-            <object class="headr__logo" data="./assets/svg/logo.svg" type="image/svg+xml"></object>
+            <a href="index.html">
+                <img src="../../assets/png/logo.png" alt="png" class="header__logo">
+            </a>
             <div class="navigation">
                 <ul class="navigation__list">
                     <li class="navigation__link "><a class="text-link" href="#">Favorite coffee</a></li>
