fix: change class into enjoy

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -37,7 +37,7 @@
                     <p>
                         With its inviting atmosphere and delicious coffee options, the Coffee House Resource is a popular destination for coffee lovers and those seeking a warm and inviting space to enjoy their favorite beverage.
                     </p>
-                    <a class="main__menu-link-wrapper" href="./src/html/menu.html">
+                    <a class="enjoy__menu-link-wrapper" href="./src/html/menu.html">
                         <button class="button button_primary ">
                             <div class="button_primary-name">Menu</div>
                             <object class="menu-link__icon" data="./assets/svg/coffee-cup.svg" type="image/svg+xml"></object>
