--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -17,10 +17,10 @@
             </a>
             <div class="navigation">
                 <ul class="navigation__list">
-                    <li class="navigation__link "><a class="text-link" href="#">Favorite coffee</a></li>
-                    <li class="navigation__link"><a class="text-link" href="#">About</a></li>
-                    <li class="navigation__link"><a class="text-link" href="#">Mobile app</a></li>
-                    <li class="navigation__link"><a class="text-link" href="#">Contact us</a></li>
+                    <li class="navigation__link "><a class="text-link" href="#favourites-coffee">Favorite coffee</a></li>
+                    <li class="navigation__link"><a class="text-link" href="#about">About</a></li>
+                    <li class="navigation__link"><a class="text-link" href="#mobile-app">Mobile app</a></li>
+                    <li class="navigation__link"><a class="text-link" href="#footer">Contact us</a></li>
                 </ul>
             </div>
             <a class="header__menu-link-wrapper" href="./src/html/menu.html">
@@ -45,7 +45,7 @@
                     </a>
                 </div>
             </section>
-            <section class="favourites-coffee">
+            <section id="favourites-coffee" class="favourites-coffee">
                 <h2>Choose your <span>favorite</span> coffee</h2>
                 <div class="carousel">
                     <object class="carousel__slide carousel__slide_right" data="./assets/svg/slide-left.svg" type="image/svg+xml"></object>
@@ -67,7 +67,7 @@
                     <span class="pagination__stick"></span>
                 </div>
             </section>
-            <section class="about">
+            <section id="about" class="about">
                 <h2>Resource is <span>the perfect and cozy place</span> where you can enjoy a variety of hot beverages, relax, catch up with friends, or get some work done.</h2>
                 <div class="about__container-img">
                     <div class="about__container-img-item"></div>
@@ -76,7 +76,7 @@
                     <div class="about__container-img-item"></div>
                 </div>
             </section>
-            <section class="mobile-app">
+            <section id="mobile-app" class="mobile-app">
                 <div class="mobile-app__describe">
                     <h2><span>Download</span> our apps to start ordering</h2>
                     <p>Download the Resource app today and experience the comfort of ordering your favorite coffee from wherever you are</p>
@@ -112,7 +112,7 @@
                 <img src="./assets/png/mobile-screens.png" alt="img" class="mobile-app__img">
             </section>
         </main>
-        <footer class="footer">
+        <footer id="footer" class="footer">
             <div class="footer__left">
                 <div class="footer__slogan">
                     <h2>Sip, Savor, Smile. <span>It’s coffee time!</span></h2>
