--- a/coffee-house/src/html/menu.html
+++ b/coffee-house/src/html/menu.html
@@ -121,7 +121,7 @@
                 </div>
             </section>
         </main>
-        <footer class="footer">
+        <footer id="footer" class="footer">
             <div class="footer__left">
                 <div class="footer__slogan">
                     <h2>Sip, Savor, Smile. <span>It’s coffee time!</span></h2>
@@ -153,15 +153,15 @@
                 <div class="footer__header-contact">Contact us</div>
                 <div class="footer__contacts">
                     <div class="footer_contacts-container">
-                        <object data="./assets/svg/pin-alt.svg" type="image/svg+xml" class="footer__contacts-icon"></object>
+                        <object data="../../assets/svg/pin-alt.svg" type="image/svg+xml" class="footer__contacts-icon"></object>
                         <div class="footer__contacts-info"> <a href="https://www.google.com/maps/search/8558+Green+Rd,+%D0%9C%D0%B0%D1%83%D0%BD%D1%82%D0%B2%D0%B8%D0%BB%D0%BB,+Lancaster+County,+%D0%9F%D0%B5%D0%BD%D1%81%D0%B8%D0%BB%D1%8C%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F,+%D0%A1%D0%A8%D0%90/@40.0412761,-76.4381018,16z/data=!3m1!4b1?entry=ttu">8558 Green Rd.,  LA</a></div>
                     </div>
                     <div class="footer_contacts-container">
-                        <object data="./assets/svg/phone.svg" type="image/svg+xml" class="footer__contacts-icon"></object>
+                        <object data="../../assets/svg/phone.svg" type="image/svg+xml" class="footer__contacts-icon"></object>
                         <div class="footer__contacts-info"><a href="tel:+16035550123">+1 (603) 555-0123</a></div>
                     </div>
                     <div class="footer_contacts-container">
-                        <object data="./assets/svg/clock.svg" type="image/svg+xml" class="footer__contacts-icon"></object>
+                        <object data="../../assets/svg/clock.svg" type="image/svg+xml" class="footer__contacts-icon"></object>
                         <div class="footer__contacts-info">Mon-Sat: 9:00 AM – 23:00 PM</div>
                     </div>
                 </div>
