--- a/coffee-house/src/html/menu.html
+++ b/coffee-house/src/html/menu.html
@@ -17,10 +17,10 @@
             </a>
             <div class="navigation">
                 <ul class="navigation__list">
-                    <li class="navigation__link "><a class="text-link" href="#">Favorite coffee</a></li>
-                    <li class="navigation__link"><a class="text-link" href="#">About</a></li>
-                    <li class="navigation__link"><a class="text-link" href="#">Mobile app</a></li>
-                    <li class="navigation__link"><a class="text-link" href="#">Contact us</a></li>
+                    <li class="navigation__link "><a class="text-link" href="../../index.html#favourites-coffee">Favorite coffee</a></li>
+                    <li class="navigation__link"><a class="text-link" href="../../index.html#about">About</a></li>
+                    <li class="navigation__link"><a class="text-link" href="../../index.html#mobile-app">Mobile app</a></li>
+                    <li class="navigation__link"><a class="text-link" href="../../index.html#footer">Contact us</a></li>
                 </ul>
             </div>
             <div class="header__menu-link header__menu-link_active">
