feat: add hover animation on food items

--- a/coffee-house/src/html/menu.html
+++ b/coffee-house/src/html/menu.html
@@ -54,7 +54,9 @@
                 <div class="menu__food-container">
                     <div class="menu__tea-category">
                         <div class="menu__food-item">
-                            <img src="../../assets/jpg/coffee-1.jpg" alt="img" class="menu__item-img">
+                            <div class="menu__item-img-wrapper">
+                                <img src="../../assets/jpg/coffee-1.jpg" alt="img" class="menu__item-img">
+                            </div>
                             <div class="menu__item-description">
                                 <div class="menu__item-name">Irish coffee</div>
                                 <div class="menu__item-about">Fragrant black coffee with Jameson Irish whiskey and whipped milk</div>
@@ -62,7 +64,9 @@
                             </div>
                         </div>
                         <div class="menu__food-item">
-                            <img src="../../assets/jpg/coffee-2.jpg" alt="img" class="menu__item-img">
+                            <div class="menu__item-img-wrapper">
+                                <img src="../../assets/jpg/coffee-2.jpg" alt="img" class="menu__item-img">
+                            </div>
                             <div class="menu__item-description">
                                 <div class="menu__item-name">Kahlua coffee</div>
                                 <div class="menu__item-about">Classic coffee with milk and Kahlua liqueur under a cap of frothed milk</div>
@@ -70,7 +74,9 @@
                             </div>
                         </div>
                         <div class="menu__food-item">
-                            <img src="../../assets/jpg/coffee-3.jpg" alt="img" class="menu__item-img">
+                            <div class="menu__item-img-wrapper">
+                                <img src="../../assets/jpg/coffee-3.jpg" alt="img" class="menu__item-img">
+                            </div>
                             <div class="menu__item-description">
                                 <div class="menu__item-name">Honey raf</div>
                                 <div class="menu__item-about">Espresso with frothed milk, cream and aromatic honey</div>
@@ -78,7 +84,9 @@
                             </div>
                         </div>
                         <div class="menu__food-item">
-                            <img src="../../assets/jpg/coffee-4.jpg" alt="img" class="menu__item-img">
+                            <div class="menu__item-img-wrapper">
+                                <img src="../../assets/jpg/coffee-4.jpg" alt="img" class="menu__item-img">
+                            </div>
                             <div class="menu__item-description">
                                 <div class="menu__item-name">Ice cappuccino</div>
                                 <div class="menu__item-about">Cappuccino with soft thick foam in summer version with ice</div>
@@ -86,7 +94,9 @@
                             </div>
                         </div>
                         <div class="menu__food-item">
-                            <img src="../../assets/jpg/coffee-5.jpg" alt="img" class="menu__item-img">
+                            <div class="menu__item-img-wrapper">
+                                <img src="../../assets/jpg/coffee-5.jpg" alt="img" class="menu__item-img">
+                            </div>
                             <div class="menu__item-description">
                                 <div class="menu__item-name">Espresso</div>
                                 <div class="menu__item-about">Classic black coffee</div>
@@ -94,7 +104,9 @@
                             </div>
                         </div>
                         <div class="menu__food-item">
-                            <img src="../../assets/jpg/coffee-6.jpg" alt="img" class="menu__item-img">
+                            <div class="menu__item-img-wrapper">
+                                <img src="../../assets/jpg/coffee-6.jpg" alt="img" class="menu__item-img">
+                            </div>
                             <div class="menu__item-description">
                                 <div class="menu__item-name">Latte</div>
                                 <div class="menu__item-about">Espresso coffee with the addition of steamed milk and dense milk foam</div>
@@ -102,7 +114,9 @@
                             </div>
                         </div>
                         <div class="menu__food-item">
-                            <img src="../../assets/jpg/coffee-7.jpg" alt="img" class="menu__item-img">
+                            <div class="menu__item-img-wrapper">
+                                <img src="../../assets/jpg/coffee-7.jpg" alt="img" class="menu__item-img">
+                            </div>
                             <div class="menu__item-description">
                                 <div class="menu__item-name">Latte macchiato</div>
                                 <div class="menu__item-about">Espresso with frothed milk and chocolate</div>
@@ -110,7 +124,9 @@
                             </div>
                         </div>
                         <div class="menu__food-item">
-                            <img src="../../assets/jpg/coffee-8.jpg" alt="img" class="menu__item-img">
+                            <div class="menu__item-img-wrapper">
+                                <img src="../../assets/jpg/coffee-8.jpg" alt="img" class="menu__item-img">
+                            </div>
                             <div class="menu__item-description">
                                 <div class="menu__item-name">Coffee with cognac</div>
                                 <div class="menu__item-about">Fragrant black coffee with cognac and whipped cream</div>
