--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/css/style.css">
-    <title>Coffee-house</title>
+    <title>Coffee house</title>
 </head>
 <body>
     <div class="wrapper">
