--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -14,7 +14,7 @@
     <div class="wrapper">
         <header class="header">
             <a href="index.html">
-                <img src="../../assets/png/logo.png" alt="png" class="header__logo">
+                <img src="./assets/png/logo.png" alt="png" class="header__logo">
             </a>
             <div class="navigation">
                 <ul class="navigation__list">
