--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -16,20 +16,22 @@
             <a href="index.html">
                 <img src="./assets/png/logo.png" alt="png" class="header__logo">
             </a>
-            <div class="navigation">
-                <ul class="navigation__list">
-                    <li class="navigation__link "><a class="text-link" href="#favourites-coffee">Favorite coffee</a></li>
-                    <li class="navigation__link"><a class="text-link" href="#about">About</a></li>
-                    <li class="navigation__link"><a class="text-link" href="#mobile-app">Mobile app</a></li>
-                    <li class="navigation__link"><a class="text-link" href="#footer">Contact us</a></li>
-                </ul>
-            </div>
-            <a class="header__menu-link-wrapper" href="./src/html/menu.html">
-                <div class="header__menu-link">
-                    <div class="header__menu-text-link">Menu</div>
-                    <object class="menu-link__icon" data="./assets/svg/coffee-cup.svg" type="image/svg+xml"></object>
+            <div class="header__links">
+                <div class="navigation">
+                    <ul class="navigation__list">
+                        <li class="navigation__link "><a class="text-link" href="#favourites-coffee">Favorite coffee</a></li>
+                        <li class="navigation__link"><a class="text-link" href="#about">About</a></li>
+                        <li class="navigation__link"><a class="text-link" href="#mobile-app">Mobile app</a></li>
+                        <li class="navigation__link"><a class="text-link" href="#footer">Contact us</a></li>
+                    </ul>
                 </div>
-            </a>
+                <a class="header__menu-link-wrapper" href="./src/html/menu.html">
+                    <div class="header__menu-link">
+                        <div class="header__menu-text-link">Menu</div>
+                        <object class="menu-link__icon" data="./assets/svg/coffee-cup.svg" type="image/svg+xml"></object>
+                    </div>
+                </a>
+            </div>
         </header>
         <main class="main">
             <section class="enjoy">
