feat: add new img positions into about section

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -32,6 +32,10 @@
                     </div>
                 </a>
             </div>
+            <div class="burger-menu">
+                <span></span>
+                <span></span>
+            </div>
         </header>
         <main class="main">
             <section class="enjoy">
