--- a/coffee-house/src/html/menu.html
+++ b/coffee-house/src/html/menu.html
@@ -16,17 +16,23 @@
             <a href="../../index.html">
                 <img src="../../assets/png/logo.png" alt="png" class="header__logo">
             </a>
-            <div class="navigation">
-                <ul class="navigation__list">
-                    <li class="navigation__link "><a class="text-link" href="../../index.html#favourites-coffee">Favorite coffee</a></li>
-                    <li class="navigation__link"><a class="text-link" href="../../index.html#about">About</a></li>
-                    <li class="navigation__link"><a class="text-link" href="../../index.html#mobile-app">Mobile app</a></li>
-                    <li class="navigation__link"><a class="text-link" href="../../index.html#footer">Contact us</a></li>
-                </ul>
+            <div class="header__links">
+                <div class="navigation">
+                    <ul class="navigation__list">
+                        <li class="navigation__link "><a class="text-link" href="../../index.html#favourites-coffee">Favorite coffee</a></li>
+                        <li class="navigation__link"><a class="text-link" href="../../index.html#about">About</a></li>
+                        <li class="navigation__link"><a class="text-link" href="../../index.html#mobile-app">Mobile app</a></li>
+                        <li class="navigation__link"><a class="text-link" href="../../index.html#footer">Contact us</a></li>
+                    </ul>
+                </div>
+                <div class="header__menu-link header__menu-link_active">
+                    <div class="text-link">Menu</div>
+                    <object class="menu-link__icon" data="../../assets/svg/coffee-cup.svg" type="image/svg+xml"></object>
+                </div>
             </div>
-            <div class="header__menu-link header__menu-link_active">
-                <div class="text-link">Menu</div>
-                <object class="menu-link__icon" data="../../assets/svg/coffee-cup.svg" type="image/svg+xml"></object>
+            <div class="burger-menu">
+                <span></span>
+                <span></span>
             </div>
         </header>
         <main class="main main-menu">
