fix: remove br tag into h1

--- a/coffee-house/src/html/menu.html
+++ b/coffee-house/src/html/menu.html
@@ -37,7 +37,7 @@
         </header>
         <main class="main main-menu">
             <section class="menu">
-                <h1>Behind each of our cups <br> hides an <span>amazing surprise</span></h1>
+                <h1>Behind each of our cups hides an <span>amazing surprise</span></h1>
                 <div class="menu__tags-container">
                     <div class="menu__tag menu__tag_active">
                         <div class="menu__tag-icon-wrapper">
