feat: add hide vision for carousel slide

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -55,7 +55,7 @@
             <section id="favourites-coffee" class="favourites-coffee">
                 <h2>Choose your <span>favorite</span> coffee</h2>
                 <div class="carousel">
-                    <object class="carousel__slide carousel__slide_right" data="./assets/svg/slide-left.svg" type="image/svg+xml"></object>
+                    <object class="carousel__slide carousel__slide_left" data="./assets/svg/slide-left.svg" type="image/svg+xml"></object>
                     <div class="carousel__container">
                         <div class="carousel__item">
                             <img src="./assets/png/coffee-slider-1.png" alt="coffee" class="carousel__img">
