fix: fix header link into menu.html

--- a/coffee-house/src/html/menu.html
+++ b/coffee-house/src/html/menu.html
@@ -22,7 +22,7 @@
                         <li class="navigation__link "><a class="text-link" href="../../index.html#favourites-coffee">Favorite coffee</a></li>
                         <li class="navigation__link"><a class="text-link" href="../../index.html#about">About</a></li>
                         <li class="navigation__link"><a class="text-link" href="../../index.html#mobile-app">Mobile app</a></li>
-                        <li class="navigation__link"><a class="text-link" href="../../index.html#footer">Contact us</a></li>
+                        <li class="navigation__link"><a class="text-link" href="#footer">Contact us</a></li>
                     </ul>
                 </div>
                 <div class="header__menu-link header__menu-link_active">
