feat: add basic desktop pagination

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -76,12 +76,30 @@
                         </style>
                     </svg>
                     <div class="carousel__container">
-                        <div class="carousel__item">
-                            <img src="./assets/png/coffee-slider-1.png" alt="coffee" class="carousel__img">
-                            <div class="carousel__describe">
-                                <div class="carousel__name-item">S’mores Frappuccino</div>
-                                <div class="carousel__describe-item">This new drink takes an espresso and mixes it with brown sugar and cinnamon before being topped with oat milk.</div>
-                                <div class="carousel__price-item">$5.50</div>
+                        <div class="carousel__container-wrapper">
+                            <div class="carousel__item">
+                                <img src="./assets/png/coffee-slider-1.png" alt="coffee" class="carousel__img">
+                                <div class="carousel__describe">
+                                    <div class="carousel__name-item">S’mores Frappuccino</div>
+                                    <div class="carousel__describe-item">This new drink takes an espresso and mixes it with brown sugar and cinnamon before being topped with oat milk.</div>
+                                    <div class="carousel__price-item">$5.50</div>
+                                </div>
+                            </div>
+                            <div class="carousel__item">
+                                <img src="./assets/png/coffee-slider-1.png" alt="coffee" class="carousel__img">
+                                <div class="carousel__describe">
+                                    <div class="carousel__name-item">S’mores Frappuccino</div>
+                                    <div class="carousel__describe-item">This new drink takes an espresso and mixes it with brown sugar and cinnamon before being topped with oat milk.</div>
+                                    <div class="carousel__price-item">$5.50</div>
+                                </div>
+                            </div>
+                            <div class="carousel__item">
+                                <img src="./assets/png/coffee-slider-1.png" alt="coffee" class="carousel__img">
+                                <div class="carousel__describe">
+                                    <div class="carousel__name-item">S’mores Frappuccino</div>
+                                    <div class="carousel__describe-item">This new drink takes an espresso and mixes it with brown sugar and cinnamon before being topped with oat milk.</div>
+                                    <div class="carousel__price-item">$5.50</div>
+                                </div>
                             </div>
                         </div>
                     </div>
