feat: add pagination logic

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -75,8 +75,8 @@
                             }
                         </style>
                     </svg>
-                    <div class="carousel__container">
-                        <div class="carousel__container-wrapper">
+                    <div class="carousel__wrapper">
+                        <div class="carousel__container">
                             <div class="carousel__item">
                                 <img src="./assets/png/coffee-slider-1.png" alt="coffee" class="carousel__img">
                                 <div class="carousel__describe">
