fix: fix position items into carousel section

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -86,19 +86,19 @@
                                 </div>
                             </div>
                             <div class="carousel__item">
-                                <img src="./assets/png/coffee-slider-1.png" alt="coffee" class="carousel__img">
+                                <img src="./assets/png/coffee-slider-2.png" alt="coffee" class="carousel__img">
                                 <div class="carousel__describe">
-                                    <div class="carousel__name-item">S’mores Frappuccino</div>
-                                    <div class="carousel__describe-item">This new drink takes an espresso and mixes it with brown sugar and cinnamon before being topped with oat milk.</div>
-                                    <div class="carousel__price-item">$5.50</div>
+                                    <div class="carousel__name-item">Caramel Macchiato</div>
+                                    <div class="carousel__describe-item">Fragrant and unique classic espresso with rich caramel-peanut syrup, with cream under whipped thick foam.</div>
+                                    <div class="carousel__price-item">$5.00</div>
                                 </div>
                             </div>
                             <div class="carousel__item">
-                                <img src="./assets/png/coffee-slider-1.png" alt="coffee" class="carousel__img">
+                                <img src="./assets/png/coffee-slider-3.png" alt="coffee" class="carousel__img">
                                 <div class="carousel__describe">
-                                    <div class="carousel__name-item">S’mores Frappuccino</div>
-                                    <div class="carousel__describe-item">This new drink takes an espresso and mixes it with brown sugar and cinnamon before being topped with oat milk.</div>
-                                    <div class="carousel__price-item">$5.50</div>
+                                    <div class="carousel__name-item">Ice coffee</div>
+                                    <div class="carousel__describe-item">A popular summer drink that tones and invigorates. Prepared from coffee, milk and ice.</div>
+                                    <div class="carousel__price-item">$4.50</div>
                                 </div>
                             </div>
                         </div>
