feat: add base pagination

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -125,9 +125,15 @@
                     </svg>
                 </div>
                 <div class="pagination">
-                    <span class="pagination__stick pagination__stick_active"></span>
-                    <span class="pagination__stick"></span>
-                    <span class="pagination__stick"></span>
+                    <span class="pagination__stick pagination__stick_active">
+                        <span class="pagination__indicator"></span>
+                    </span>
+                    <span class="pagination__stick">
+                        <span class="pagination__indicator"></span>
+                    </span>
+                    <span class="pagination__stick">
+                        <span class="pagination__indicator"></span>
+                    </span>
                 </div>
             </section>
             <section id="about" class="about">
