feat: add functionality whitch search data into json

--- a/coffee-house/src/html/menu.html
+++ b/coffee-house/src/html/menu.html
@@ -11,6 +11,9 @@
     <title>Coffee house</title>
 </head>
 <body>
+    <!-- <div class="modal">
+        <div class="modal__window"></div>
+    </div> -->
     <div class="wrapper wrapper-menu">
         <header class="header">
             <a href="../../index.html">
